@@ -31,7 +31,7 @@
 #   OF THE USE OF THIS FILE, EVEN IF ADVISED OF THE POSSIBILITY OF
 #   SUCH DAMAGE.
 #
-#   $Id: 032_separation,v 1.1 2004/04/07 10:48:20 fredo Exp $
+#   $Id: 032_separation,v 1.2 2004/09/13 15:30:58 fredo Exp $
 #
 #=======================================================================
 
